# trisort-plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_c_compare.py  plot_benchmark.py
include/: trisort.h
src/: cache_block.c  common.c  entropy.c  hilbert_bucket.c  introsmooth.c  pybind.c  trisort_plus.c
tests/: smoke.c
